# UniversityRatingSystem

./: .gitignore  README.md  container-shell.sh  deploy.sh  docker-compose.dev.yaml  docker-compose.prod.yaml  shell-api.sh  shell-web.sh
api/: .dockerignore  .gitignore  (+4 more)
api/src/: activate.sh  create_superuser.py  entrypoint.sh  graph_models.sh  load-fixture.sh  localize.sh  manage.py  pyproject.toml
api/src/apps/core/: admin.py  apps.py  exceptions.py  routers.py  shortcuts.py  urls.py
api/src/apps/departments/: admin.py  apps.py  models.py  views.py
api/src/apps/departments/migrations/: 0001_initial.py
api/src/apps/educator_rating/: admin.py  apps.py  brokers.py  convertions.py  fields.py  models.py  permissions.py  serializers.py  views.py
api/src/apps/educator_rating/migrations/: 0001_initial.py
api/src/apps/educators/: admin.py  apps.py  models.py  permissions.py  serializers.py  views.py
api/src/apps/educators/migrations/: 0001_initial.py  0002_educator_personal_number.py  0003_educator_scopus_id.py  0004_alter_educator_scopus_id.py  0005_educator_wos_id_alter_educator_scopus_id.py  0006_remove_educator_personal_number.py
api/src/apps/faculties/: admin.py  apps.py  models.py
api/src/apps/faculties/migrations/: 0001_initial.py
api/src/apps/integration_1c/: apps.py  brokers.py  constructors.py  convertions.py  queries.py
api/src/apps/rating/: admin.py  apps.py  serializers.py  validators.py  views.py
api/src/apps/rating/migrations/: 0001_initial.py
api/src/apps/users/: admin.py  exceptions.py  forms.py  models.py  serializers.py  tests.py  views.py
api/src/university_rating_system/: settings.py  urls.py
src/: Dockerfile  entrypoint.sh  gdown-unzip.sh  manage.py  pyproject.toml
src/api/core/: apps.py  exceptions.py  routers.py  shortcuts.py  urls.py
src/api/departments/: admin.py  apps.py  models.py  serializers.py  views.py
src/api/educator_rating/: admin.py  apps.py  fields.py  models.py  permissions.py  serializers.py  views.py
src/api/educators/: admin.py  apps.py  models.py  permissions.py  serializers.py  views.py
src/api/educators_rating/: apps.py
src/api/faculties/: admin.py  apps.py  models.py  serializers.py  views.py
src/api/indicators/: apps.py  models.py
src/api/rating/: admin.py  apps.py  models.py  serializers.py  validators.py  views.py
src/api/users/: admin.py  apps.py  forms.py  models.py  permissions.py  serializers.py  tests.py  views.py
src/locale/ru/LC_MESSAGES/: django.po
src/rating/rating/: settings.py  urls.py
src/university_rating_system/: asgi.py  routers.py  settings.py  urls.py  wsgi.py
(+101 files in other folders)
